--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         </nav>
     </header>
     <section class=" contenedor1 ancho">
-        <div class="banner">
+        <div class="bannercontenedor">
+        <div class="banner ancho">
             <h1>Everybody has a chance to apply his knowledge</h1>
             <h3>Thank you for visiting our site!</h3>
             <a class="btn-uno" href="#">Lear more</a>
+        </div>
         </div>
     </section>
 </body>
