creacion nuevas paginas y css footer

--- a/contacto.html
+++ b/contacto.html
@@ -9,14 +9,12 @@
     <script src='https://kit.fontawesome.com/2ee0245f3d.js' crossorigin='anonymous'></script>
 </head>
 <body>
-    <!--Flecha que tira pa arriba-->
-    <i class="ir-arriba fa-solid fa-circle-up"></i>
     <header class="ancho">
         <figure class >
             <img src="imagenes/brand.png" alt= "" />
         </figure>
         <nav>
-        <i class="fas fa-bars fa-2x index"></i>
+        <i class="fas fa-bars fa-2x contacto"></i>
             <ul class="contenedormenu ">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="sector.html">sector/division</a></li>
@@ -26,15 +24,7 @@
             </ul>
         </nav>
     </header>
-    <section class=" contenedor1 ancho">
-        <div class="bannercontenedor">
-        <div class="banner ancho">
-            <h1>Everybody has a chance to apply his knowledge</h1>
-            <h3>Thank you for visiting our site!</h3>
-            <a class="btn-uno" href="#">Lear more</a>
-        </div>
-        </div>
-    </section>
+   
     <section class="contenedor2 ancho">
         <h2 class="welcome">Welcome to our site!</h2>
         <div class="contenedorinfo">
@@ -45,13 +35,7 @@
                 <h3>Ensuring the highest level of customers satisfaction</h3>
                 <p>Our company is your one-stop-solution for all needs. There is no doubt that we are the leaders and you don't have to worry about our image because it is perfect.</p>
             </article>
-            <article class="info1">
-                <figure  >
-                    <img src="imagenes/home-03.jpg" alt= "" />
-                </figure>
-                <h3>Ensuring the highest level of customers satisfaction</h3>
-                <p>Thank you for visiting our site! You are at the right place! We are focused on providing integrated solutions and services to customers around the world.</p>
-            </article>
+           
         </div>
     </section>
     <footer class="pie ancho">
